// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params.translator translateToBodyParameter given x-examples should translate to body parameter with multiple examples 1`] = `
Object {
  "contents": Array [
    Object {
      "examples": Array [
        Object {
          "id": Any<String>,
          "key": "example-1",
          "value": Object {
            "hello": "world",
          },
        },
        Object {
          "id": Any<String>,
          "key": "example-2",
          "value": Object {
            "foo": "bar",
          },
        },
      ],
      "id": Any<String>,
      "mediaType": "*",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "format": "e-mail",
        "x-stoplight": Object {
          "id": Any<String>,
        },
      },
    },
  ],
  "description": "descr",
  "id": Any<String>,
  "required": true,
}
`;

exports[`params.translator translateToBodyParameter should translate to body parameter 1`] = `
Object {
  "contents": Array [
    Object {
      "examples": Array [],
      "id": Any<String>,
      "mediaType": "*",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "format": "e-mail",
        "x-stoplight": Object {
          "id": Any<String>,
        },
      },
    },
  ],
  "description": "descr",
  "id": Any<String>,
  "name": "name",
  "required": true,
}
`;

exports[`params.translator translateToHeaderParam should translate header param 1`] = `
Object {
  "description": "desc",
  "id": Any<String>,
  "name": "name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "minimum": 12,
    "type": "integer",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
  "style": "simple",
}
`;

exports[`params.translator translateToHeaderParams should translate empty dictionary to empty array 1`] = `Array []`;

exports[`params.translator translateToHeaderParams should translate to multiple header params 1`] = `
Object {
  "description": "a description",
  "id": "4a76be1a8b54a",
  "name": "header-name",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "type": "string",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
  "style": "simple",
}
`;

exports[`params.translator translateToHeaderParams should translate to multiple header params 2`] = `
Object {
  "description": "another description",
  "id": "d047efbd7d6b5",
  "name": "plain-tex",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "type": "string",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
  "style": "simple",
}
`;

exports[`params.translator translateToHeaderParams should translate to simple header param 1`] = `
Object {
  "description": "a description",
  "id": "4a76be1a8b54a",
  "name": "header-name",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "type": "string",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
  "style": "simple",
}
`;

exports[`params.translator translateToPathParameter should translate 1`] = `
Object {
  "description": "descr",
  "id": Any<String>,
  "name": "name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "type": "string",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
  "style": "simple",
}
`;
